# winxime

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  DECISIONS.md  PROGRESS.md  README.md  build-librime.bat  build-librime.ps1  dll_register_stderr.txt  full-uninstall.ps1  install-msi.ps1  msi-build.ps1  msi-summary.ps1  msix-bundle.ps1  package-release.ps1  rebuild.ps1  rust-toolchain.toml  uninstall-msi.ps1  view-logs.ps1  winxime-test.cer
.cargo/: config.toml
.github/workflows/: ci.yml  code-signing.yml  release.yml
config/: default.yaml  wubi86_jidian.schema.yaml  wubi86_jidian_pinyin.schema.yaml  wubi86_jidian_trad.schema.yaml  wubi86_jidian_trad_pinyin.schema.yaml  xime.yaml
crates/librime/: Cargo.toml  README.md
crates/librime-sys/: Cargo.toml  README.md  build.rs
crates/librime-sys/src/: lib.rs
crates/librime/src/: commit.rs  context.rs  error.rs  key.rs  levers.rs  lib.rs  session.rs  status.rs  traits.rs
crates/test-ipc/: Cargo.toml
crates/test-ipc/src/: main.rs
crates/winxime/: Cargo.toml
crates/winxime-config/: Cargo.toml
crates/winxime-config/resources/: xime.yaml
crates/winxime-config/src/: lib.rs  rime_deploy.rs  schema_manager.rs  smart_suggestion.rs
crates/winxime-core/: Cargo.toml
crates/winxime-core/src/: lib.rs
crates/winxime-ipc/: Cargo.toml
crates/winxime-ipc/src/: lib.rs  messages.rs  pipe.rs
crates/winxime-predict/: Cargo.toml  test_vocab.json
crates/winxime-predict/src/: lib.rs
crates/winxime-rime/: Cargo.toml
crates/winxime-rime/src/: engine.rs  lib.rs
crates/winxime-server/: Cargo.toml  build.rs
crates/winxime-server/msix/: AppxManifest.xml
crates/winxime-server/src/: config.rs  context.rs  ipc_server.rs  log.rs  main.rs  register.rs  schema_manager.rs  tray.rs  ui.rs  ximed_server.rs
crates/winxime-server/wix/: License.rtf  data.wxs  main.wxs  resources.wxs  zh-cn.wxl
crates/winxime-setup/: Cargo.toml  build.rs
crates/winxime-setup/src/: main.rs  rime_config.rs  state.rs  theme.rs
crates/winxime-setup/src/components/: button.rs  dropdown.rs  kbd.rs  label.rs  mod.rs  number_input.rs  radio.rs  settings.rs  switch.rs  title_bar.rs
crates/winxime-setup/src/pages/: about.rs  appearance.rs  clipboard.rs  dictionary.rs  hotkeys.rs  input_schema.rs  mod.rs  pair.rs  smart_suggestion.rs
crates/winxime-setup/ui/: settings.slint
crates/winxime-tsf/: Cargo.toml
crates/winxime-tsf-register/: Cargo.toml
crates/winxime-tsf-register/src/: main.rs
crates/winxime-tsf/src/: class_factory.rs  dll.rs  language_bar.rs  lib.rs  log.rs  text_input_processor.rs
crates/winxime-ui/: Cargo.toml
crates/winxime-ui/src/: lib.rs  win32_ui.rs
crates/winxime/src/: main.rs
resources/: xime.yaml
scripts/: dev.ps1
xtask/: Cargo.toml
xtask/src/: main.rs
