[workspace]
resolver = "2"
members = [
    "crates/librime",
    "crates/winxime-tsf",
    "crates/winxime-rime",
    "crates/winxime-ipc",
    "crates/winxime-server",
    "crates/winxime-config",
    "crates/winxime-setup",
    "crates/winxime-tsf-register",
    "crates/winxime-predict",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Kor1 <kingzcheung@gmail.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/ximeiorg/winxime"

[workspace.dependencies]
librime = { path = "crates/librime" }
winxime-tsf = { path = "crates/winxime-tsf" }
winxime-rime = { path = "crates/winxime-rime" }
winxime-ipc = { path = "crates/winxime-ipc" }
winxime-config = { path = "crates/winxime-config" }
winxime-tsf-register = { path = "crates/winxime-tsf-register" }
winxime-predict = { path = "crates/winxime-predict" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-saphyr = "0.0.26"
thiserror = "2"
tracing = "0.1"

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_UI_TextServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"