[package]
name = "librime-sys2"
version = "0.1.0"
edition = "2021"
authors = ["Kor1 <kingzcheung@gmail.com>"]
license = "BSD-3-Clause"
description = "Raw FFI bindings to librime"
repository = "https://github.com/ximeiorg/xime-wayland"
links = "rime"
exclude = ["/target"]

[lib]
name = "librime_sys2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_LibraryLoader"] }