[package]
name = "librime"
version = "0.1.0"
edition = "2021"
authors = ["Kor1 <kingzcheung@gmail.com>"]
license = "BSD-3-Clause"
description = "Safe Rust bindings to librime"
repository = "https://github.com/ximeiorg/xime-wayland"

[dependencies]
librime-sys2 = { version = "0.1.0", path = "../librime-sys" }
thiserror = "2.0.18"
once_cell = "1.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }