[package]
name = "winxime-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "winxime-server"
path = "src/main.rs"

[dependencies]
winxime-ipc = { path = "../winxime-ipc" }
xime-rime.workspace = true
xime-config.workspace = true
librime.workspace = true
librime-sys2.workspace = true
ximed.workspace = true
tokio = { version = "1", features = ["rt"] }
serde.workspace = true
serde_json.workspace = true
tracing = "0.1"
interprocess = "2.4"
widestring = "1.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"
windows-numerics = "0.3.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
