[package]
name = "winxime-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0"
repository.workspace = true

[dependencies]
gpui = { package = "gpui-unofficial", version = "1.1.7" }
gpui-platform = { package = "gpui-platform-gpui-unofficial", version = "1.1.7" , features = ["font-kit"]}
winxime-config = { path = "../winxime-config" }
winxime-ipc = { path = "../winxime-ipc" }
winxime-predict = { path = "../winxime-predict" }
anyhow = "1.0"
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Registry", "Win32_System_Threading", "Win32_System_Com"] }
raw-window-handle = "0.6"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
ureq = "2.9"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"