[package]
name = "winxime-setup"
version.workspace = true
edition.workspace = true
authors.workspace = true
license = "GPL-3.0"
repository.workspace = true

[dependencies]
xime-setup-lib.workspace = true
gpui = { git = "https://github.com/zed-industries/zed", rev = "53e4d34a71f61f13572919c04335e9da838623e6" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "53e4d34a71f61f13572919c04335e9da838623e6" }
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
windows-core = "0.62.2"

[[bin]]
name = "winxime-setup"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
